# src/main/java/br/com/cooperativevoting/api/mapper/SessaoVotacaoMapper.java
@@ -1,10 +1,8 @@
 package br.com.cooperativevoting.api.mapper;
 
 import br.com.cooperativevoting.api.dto.response.SessaoVotacaoResponse;
-import br.com.cooperativevoting.domain.model.Pauta;
 import br.com.cooperativevoting.domain.model.SessaoVotacao;
 import org.mapstruct.Mapper;
-import org.mapstruct.Mapping;
 
 /**
  * Conversão entre {@link SessaoVotacao} e seu DTO de saída.
@@ -13,6 +11,5 @@ import org.mapstruct.Mapping;
 @Mapper(componentModel = "spring")
 public interface SessaoVotacaoMapper {
 
-    @Mapping(target = "pautaCodigo", source = "pauta.codigo")
-    SessaoVotacaoResponse toResponse(SessaoVotacao sessaoVotacao, Pauta pauta);
+    SessaoVotacaoResponse toResponse(SessaoVotacao sessaoVotacao);
 }
